--- a/css/addressBookForm.css
+++ b/css/addressBookForm.css
@@ -12,10 +12,8 @@ body{
 .header-content{
     display: flex;
     flex-direction: row;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-    padding: 15px 50px; 
-    background-color: white;
     border: 0px solid green;
 }
 
